syntax = "proto3";
option java_multiple_files = true;
option java_package = "proto.dtos.voluntario_externo";

package proto.dtos;

message VoluntarioExternoProto {
    string idVoluntario = 1;
	string nombre = 2;
	string apellido = 3;
	string telefono = 4;
	string email = 5;
	string idOrganizacion = 6;
}