syntax = "proto3";

option java_multiple_files = true;
option java_package = "proto.services.kafka";
package proto.services.kafka;

import "google/protobuf/empty.proto";
import "dtos/voluntario_externo_dto.proto";

message BajaEventoKafkaProto {
    string idOrganizacion = 1;
    int64 idEvento = 2;
}

message AdhesionVoluntarioExternoRequestProto {
	int64 idEventoSolidario = 1;
	string idOrganizador = 2;
	proto.dtos.VoluntarioExternoProto voluntarioExterno = 3;
}

service KafkaService {
    rpc PublicarBajaEvento(BajaEventoKafkaProto) returns (google.protobuf.Empty);
    rpc PublicarAdhesionParticipanteInterno(AdhesionVoluntarioExternoRequestProto) returns (google.protobuf.Empty);
}